[package]
name = "quarterback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.2" }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
getrandom = "0.2.10"
indoc = "2.0.4"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "uuid"] }
rand_core = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
simple-repl = "0.1.4"
tokio = { version = "1.33.0", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
uuid = { version = "1.4.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
